@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.*;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 /**
@@ -14,14 +15,14 @@ import java.util.stream.Collectors;
  *
  * @author Dunaev Kirill
  */
-public class WebCrawler implements Crawler {
+public class WebCrawler implements AdvancedCrawler {
     private static final int DEFAULT_LIMITATIONS = 100;
     private static final int DEFAULT_DEPTH = 1;
 
     private final Downloader downloader;
     private final ExecutorService downloadService;
     private final ExecutorService extractService;
-    private final Map<String, Semaphore> perHostSemaphores;
+    private final Map<String, PerHostQueue> hostsQueues;
     private final int perHost;
 
     /**
@@ -34,7 +35,7 @@ public class WebCrawler implements Crawler {
      * @throws IllegalArgumentException if non-positive limitations are provided
      * @throws NullPointerException     if downloader is null
      */
-    public WebCrawler(Downloader downloader, int downloaders, int extractors, int perHost) {
+    public WebCrawler(final Downloader downloader, final int downloaders, final int extractors, final int perHost) {
         Objects.requireNonNull(downloader, "downloader must not be null");
         if (downloaders <= 0 || extractors <= 0 || perHost <= 0) {
             throw new IllegalArgumentException("Expected positive limitations");
@@ -43,71 +44,132 @@ public class WebCrawler implements Crawler {
         this.downloader = downloader;
         downloadService = Executors.newFixedThreadPool(downloaders);
         extractService = Executors.newFixedThreadPool(extractors);
-        perHostSemaphores = new ConcurrentHashMap<>();
+        hostsQueues = new ConcurrentHashMap<>();
         this.perHost = perHost;
     }
 
     private List<String> getLinks(
-            Map<String, Optional<IOException>> downloaded,
-            Document doc,
-            String url
+            final Map<String, IOException> errors,
+            final Document doc,
+            final String url
     ) {
         try {
             return doc.extractLinks();
         } catch (final IOException e) {
-            downloaded.replace(url, Optional.of(e));
+            errors.put(url, e);
         }
         return Collections.emptyList();
     }
 
     private Future<List<String>> downloadThenExtractLinks(
-            Map<String, Optional<IOException>> downloaded,
-            String url,
-            int depth
-    ) throws InterruptedException {
+            final Set<String> downloaded,
+            final Map<String, IOException> errors,
+            final String url,
+            final int depth
+    ) {
         try {
-            if (Objects.isNull(downloaded.putIfAbsent(url, Optional.empty()))) {
-                String host = URLUtils.getHost(url);
-                acquireHost(host);
-                try {
-                    Document doc = downloader.download(url);
-                    if (depth > 1) {
-                        return extractService.submit(() -> getLinks(downloaded, doc, url));
-                    }
-                } finally {
-                    releaseHost(host);
-                }
+            final Document doc = downloader.download(url);
+            downloaded.add(url);
+            if (depth > 1) {
+                return extractService.submit(() -> getLinks(errors, doc, url));
             }
         } catch (final IOException e) {
-            downloaded.replace(url, Optional.of(e));
+            errors.put(url, e);
         }
         return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    private Map<String, Optional<IOException>> bfsDownload(
+    private class PerHostQueue {
+        ArrayDeque<Task> queue = new ArrayDeque<>();
+        private int counter = 0;
+
+        private record Task(Callable<Future<List<String>>> task,
+                            CompletableFuture<Future<Future<List<String>>>> resultFuture) {
+        }
+
+        // returns future that will be done when the task is picked up by a download service
+        private synchronized Future<Future<Future<List<String>>>> submit(Callable<Future<List<String>>> task) {
+            if (counter < perHost) {
+                ++counter;
+                return CompletableFuture.completedFuture(downloadService.submit(() -> {
+                    try {
+                        return task.call();
+                    } finally {
+                        done();
+                    }
+                }));
+            } else {
+                CompletableFuture<Future<Future<List<String>>>> future = new CompletableFuture<>();
+                queue.add(new Task(task, future));
+                return future;
+            }
+        }
+
+        private synchronized void done() {
+            --counter;
+            Task next = queue.poll();
+            if (next != null) {
+                next.resultFuture.complete(submit(next.task).resultNow());
+            }
+        }
+    }
+
+    private Future<Future<Future<List<String>>>> signToDownloadQueue(
+            final Set<String> downloaded,
+            final Map<String, IOException> errors,
             String url,
-            int depth
-    ) throws InterruptedException {
-        Map<String, Optional<IOException>> downloaded = new ConcurrentHashMap<>();
+            int i,
+            final Predicate<String> allowURL,
+            final Predicate<String> allowHost
+    ) {
+        final String host = sneakyCallable(() -> URLUtils.getHost(url));
+        if (allowHost.test(host) && allowURL.test(url)) {
+            return hostsQueues
+                    .computeIfAbsent(host, k -> new PerHostQueue())
+                    .submit(() -> downloadThenExtractLinks(downloaded, errors, url, i));
+        } else {
+            // More futures to the God of future *I am a Time Lord?*
+            return CompletableFuture.completedFuture(CompletableFuture.completedFuture(
+                    CompletableFuture.completedFuture(Collections.emptyList()))
+            );
+        }
+    }
+
+    private Result bfsDownload(
+            final String url,
+            final int depth,
+            final Predicate<String> allowURL,
+            final Predicate<String> allowHost
+    ) {
+        final Map<String, IOException> errors = new ConcurrentHashMap<>();
+        final Set<String> downloaded = ConcurrentHashMap.newKeySet();
 
         Set<String> toProcess = Set.of(url);
         for (int layer = depth; layer > 0 && !toProcess.isEmpty(); --layer) {
             final int i = layer;
 
-            var downloadFutures = downloadService.invokeAll(toProcess
-                    .stream()
-                    .<Callable<Future<List<String>>>>map(u -> () -> downloadThenExtractLinks(downloaded, u, i))
-                    .toList()
-            );
+            final var downloadFutures = toProcess.stream()
+                    .filter(u -> !downloaded.contains(u) && !errors.containsKey(u))
+                    .map(u -> signToDownloadQueue(downloaded, errors, u, i, allowURL, allowHost))
+                    .toList();
 
             toProcess = downloadFutures.stream()
-                    .map(f -> sneakyCallable(f::get))    // Get downloaded documents
-                    .map(f -> sneakyCallable(f::get))    // Get extracted links
-                    .flatMap(List::stream)               // Concat all links
+                    .map(f -> sneakyCallable(f::get))  // This get waits for task to be picked up by a download service
+                    .map(f -> sneakyCallable(f::get))  // Get downloaded documents
+                    .map(f -> sneakyCallable(f::get))  // Get extracted links
+                    .flatMap(List::stream)             // Concat all links
                     .collect(Collectors.toSet());
         }
 
-        return downloaded;
+        return new Result(downloaded.stream().toList(), errors);
+    }
+
+    private Result downloadSiteLimits(final String url, final int depth, final Predicate<String> allowURL, final Predicate<String> allowHost) {
+        if (depth < 1) {
+            throw new IllegalArgumentException("Depth should be >= 1");
+        }
+
+        return sneakyCallable(() -> bfsDownload(url, depth, allowURL, allowHost));
     }
 
     /**
@@ -116,38 +178,32 @@ public class WebCrawler implements Crawler {
      * @throws IllegalArgumentException if depth {@code <1}
      */
     @Override
-    public Result download(String url, int depth) {
-        if (depth < 1) {
-            throw new IllegalArgumentException("Depth should be >= 1");
-        }
-
-        return makeResult(sneakyCallable(() -> bfsDownload(url, depth)));
+    public Result download(final String url, final int depth, final Set<String> excludes) {
+        return downloadSiteLimits(
+                url, depth,
+                u -> excludes.stream().noneMatch(u::contains),
+                h -> true
+        );
     }
 
-    private static Result makeResult(Map<String, Optional<IOException>> all) {
-        List<String> downloaded = new ArrayList<>();
-        Map<String, IOException> errors = new HashMap<>();
-        all.forEach((u, err) -> {
-            if (err.isEmpty()) {
-                downloaded.add(u);
-            } else {
-                errors.put(u, err.get());
-            }
-        });
+    /**
+     * {@inheritDoc}
+     *
+     * @throws IllegalArgumentException if depth {@code <1}
+     */
+    @Override
+    public Result advancedDownload(final String url, final int depth, final List<String> hosts) {
+        final Set<String> hostsSet = new HashSet<>();
+        hostsSet.addAll(hosts);
 
-        return new Result(downloaded, errors);
+        return downloadSiteLimits(
+                url, depth,
+                u -> true,
+                hostsSet::contains
+        );
     }
 
-    private void acquireHost(String host) throws InterruptedException {
-        perHostSemaphores.computeIfAbsent(host, h -> new Semaphore(perHost));
-        perHostSemaphores.get(host).acquire();
-    }
-
-    private void releaseHost(String host) {
-        perHostSemaphores.get(host).release();
-    }
-
-    private static <R> R sneakyCallable(Callable<R> callable) {
+    private static <R> R sneakyCallable(final Callable<R> callable) {
         try {
             return callable.call();
         } catch (final Exception e) {
@@ -157,24 +213,8 @@ public class WebCrawler implements Crawler {
 
     @Override
     public void close() {
-        gracefulShutdown(downloadService);
-        gracefulShutdown(extractService);
-    }
-
-    private void gracefulShutdown(ExecutorService service) {
-        service.shutdown();
-        try {
-            if (!service.awaitTermination(30, TimeUnit.SECONDS)) {
-                forceShutdown(service);
-            }
-        } catch (InterruptedException e) {
-            forceShutdown(service);
-            Thread.currentThread().interrupt();
-        }
-    }
-
-    private void forceShutdown(ExecutorService service) {
-        service.shutdownNow();
+        downloadService.close();
+        extractService.close();
     }
 
     /**
@@ -184,27 +224,27 @@ public class WebCrawler implements Crawler {
      *
      * @param args command line arguments
      */
-    public static void main(String[] args) {
+    public static void main(final String[] args) {
         Objects.requireNonNull(args);
         Arrays.stream(args).forEach(Objects::requireNonNull);
 
         if (args.length < 1) {
-            System.err.println("Expected at least 1 argument");
-            System.exit(1);
+            System.err.println("Expected at least 1 argument. Usage: WebCrawler url [depth [downloads [extractors [perHost]]]]}");
+            return;
         }
 
-        String url = args[0];
+        final String url = args[0];
         try {
-            int depth = parseIntArgument(args, 1, DEFAULT_DEPTH);
-            int downloaders = parseIntArgument(args, 2, DEFAULT_LIMITATIONS);
-            int extractors = parseIntArgument(args, 3, DEFAULT_LIMITATIONS);
-            int perHost = parseIntArgument(args, 4, DEFAULT_LIMITATIONS);
+            final int depth = parseIntArgument(args, 1, DEFAULT_DEPTH);
+            final int downloaders = parseIntArgument(args, 2, DEFAULT_LIMITATIONS);
+            final int extractors = parseIntArgument(args, 3, DEFAULT_LIMITATIONS);
+            final int perHost = parseIntArgument(args, 4, DEFAULT_LIMITATIONS);
             System.out.printf(
                     "Applied settings:%n\t* Url: \"%s\"%n\t* Depth: %d%n\t* Downloaders: %d%n\t* Extractors: %d%n\t* PerHost: %d%n",
                     url, depth, downloaders, extractors, perHost
             );
 
-            try (Crawler crawler =
+            try (final Crawler crawler =
                          new WebCrawler(
                                  new CachingDownloader(0, Path.of("cached-sites/")),
                                  downloaders, extractors, perHost
@@ -214,33 +254,30 @@ public class WebCrawler implements Crawler {
                     print(crawler.download(url, depth));
                 } catch (final RuntimeException e) {
                     System.err.println("Error while crawling: " + e.getMessage());
-                    System.exit(2);
                 }
             } catch (final IOException e) {
                 System.err.println("Can't create temporary directory for downloader: " + e.getMessage());
-                System.exit(1);
             }
         } catch (final IllegalArgumentException e) {
             System.err.println("Bad limitations provided: " + e.getMessage());
-            System.exit(1);
         }
     }
 
-    private static int parseIntArgument(String[] args, int index, int defaultValue) {
+    private static int parseIntArgument(final String[] args, final int index, final int defaultValue) {
         if (index >= args.length) {
             return defaultValue;
         }
 
-        int arg = Integer.parseInt(args[index]);
+        final int arg = Integer.parseInt(args[index]);
         if (arg <= 0) {
-            throw new IllegalArgumentException(String.format("Expected positive integer for limitations, found %d", arg));
+            throw new IllegalArgumentException("Expected positive integer for limitations, found %d".formatted(arg));
         }
         return arg;
     }
 
-    private static void print(Result result) {
-        List<String> downloaded = result.getDownloaded();
-        Map<String, IOException> errors = result.getErrors();
+    private static void print(final Result result) {
+        final List<String> downloaded = result.getDownloaded();
+        final Map<String, IOException> errors = result.getErrors();
         if (downloaded.isEmpty()) {
             System.out.println("Nothing has been downloaded.");
         } else {
